--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
 			</div>
 			<div class="contact__form">
 				<div class="contact__form__item firstForm form__tab__1 active">
-					<form form action="javascript:void(0)" class="formLogin">
+					<form action="javascript:void(0)" class="formLogin">
 						<input type="text" class="form-item contact__name _req" placeholder="Your Name">
 						<input type="email" class="form-item contact__email _req" placeholder="Your Email">
 						<textarea placeholder="Your Message" class="contact__text form-item _req"></textarea>
@@ -1005,7 +1005,7 @@
 					</form>
 				</div>
 				<div class="contact__form__item form__tab__2">
-					<form form action="javascript:void(0)" class="formLogin2">
+					<form action="javascript:void(0)" class="formLogin2">
 						<input type="text" placeholder="Твоя Имя" class="form-item contact__name _req">
 						<input type="email" class="form-item contact__email _req" placeholder="Твоя Почта">
 						<select name="" id="" class="select-form">
