add cart function

--- a/index.html
+++ b/index.html
@@ -135,196 +135,7 @@
 			<h1 class="sofa__title">
 				Диваны
 			</h1>
-			<div class="sofa__content">
-				<div class="sofa__item sofa__product">
-					<div class="sofa__top">
-						<img src="img/divan.jpg" alt="" class="sofa__img">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fal fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name sofa__product__title">
-						Диван Forest
-					</p>
-					<p class="product__price sofa__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item sofa__product">
-					<div class="sofa__top">
-						<img src="img/divan.jpg" alt="" class="sofa__img">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fal fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name sofa__product__title">
-						Диван Forest
-					</p>
-					<p class="product__price sofa__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item sofa__product">
-					<div class="sofa__top">
-						<img src="img/divan.jpg" alt="" class="sofa__img">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fal fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name sofa__product__title">
-						Диван Forest
-					</p>
-					<p class="product__price sofa__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item sofa__product">
-					<div class="sofa__top">
-						<img src="img/divan.jpg" alt="" class="sofa__img">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fal fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name sofa__product__title">
-						Диван Forest
-					</p>
-					<p class="product__price sofa__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item sofa__product">
-					<div class="sofa__top">
-						<img src="img/divan.jpg" alt="" class="sofa__img">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fal fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name sofa__product__title">
-						Диван Forest
-					</p>
-					<p class="product__price sofa__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item sofa__product">
-					<div class="sofa__top">
-						<img src="img/divan.jpg" alt="" class="sofa__img">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fal fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name sofa__product__title">
-						Диван Forest
-					</p>
-					<p class="product__price sofa__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item sofa__product">
-					<div class="sofa__top">
-						<img src="img/divan.jpg" alt="" class="sofa__img">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fal fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name sofa__product__title">
-						Диван Forest
-					</p>
-					<p class="product__price sofa__price">
-						24 990р
-					</p>
-				</div>
+			<div class="sofa__content sofaWrap">
 				<div class="sofa__item sofa__product">
 					<div class="sofa__top">
 						<img src="img/divan.jpg" alt="" class="sofa__img">
@@ -360,196 +171,7 @@
 			<h1 class="sofa__title">
 				Стулья
 			</h1>
-			<div class="sofa__content">
-				<div class="sofa__item">
-					<div class="sofa__top chair__top">
-						<img src="img/chair.jpg" alt="">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fas fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name">
-						Диван Forest
-					</p>
-					<p class="product__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item">
-					<div class="sofa__top chair__top">
-						<img src="img/chair.jpg" alt="">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fas fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name">
-						Диван Forest
-					</p>
-					<p class="product__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item">
-					<div class="sofa__top chair__top">
-						<img src="img/chair.jpg" alt="">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fas fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name">
-						Диван Forest
-					</p>
-					<p class="product__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item">
-					<div class="sofa__top chair__top">
-						<img src="img/chair.jpg" alt="">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fas fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name">
-						Диван Forest
-					</p>
-					<p class="product__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item">
-					<div class="sofa__top chair__top">
-						<img src="img/chair.jpg" alt="">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fas fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name">
-						Диван Forest
-					</p>
-					<p class="product__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item">
-					<div class="sofa__top chair__top">
-						<img src="img/chair.jpg" alt="">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fas fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name">
-						Диван Forest
-					</p>
-					<p class="product__price">
-						24 990р
-					</p>
-				</div>
-				<div class="sofa__item">
-					<div class="sofa__top chair__top">
-						<img src="img/chair.jpg" alt="">
-						<div class="sofa__top__holder">
-							<div class="sofa__top__item heart">
-								<i class="far fa-heart"></i>
-							</div>
-							<div class="sofa__top__item eye">
-								<i class="far fa-eye"></i>
-							</div>
-							<div class="sofa__top__item chart">
-								<i class="far fa-chart-bar"></i>
-							</div>
-						</div>
-						<div class="buy-button">
-							<!-- <i class="far fa-check-square"></i> -->
-							<i class="fas fa-shopping-cart"></i>
-							<span>В корзину</span>
-						</div>
-					</div>
-					<p class="product__name">
-						Диван Forest
-					</p>
-					<p class="product__price">
-						24 990р
-					</p>
-				</div>
+			<div class="sofa__content chairWrap">
 				<div class="sofa__item">
 					<div class="sofa__top chair__top">
 						<img src="img/chair.jpg" alt="">
@@ -963,6 +585,17 @@
 					</div>
 					<i class="delete__cart fal fa-times"></i>
 				</div>
+			</div>
+		</div>
+		<div class="totalInfoHolder">
+			<span class="totalPrice">Подытог:<span class="priceTotal">0</span></span>
+			<div class="totalInfoButtonHolder">
+				<a href="cart.html" class="goToCart">
+					Просмотр корзины
+				</a>
+				<a href="#" class="goToOrdering">
+					Оформление заказа
+				</a>
 			</div>
 		</div>
 	</div>
